# Intendant

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SysPrompt.md  SysPromptLiveAudio.md  SysPrompt_implementation.md  SysPrompt_orchestrator.md  SysPrompt_presence.md  SysPrompt_research.md  SysPrompt_tools.md  SysPrompt_user.md  build.rs  intendant.toml  package-lock.json  package.json  rust-toolchain.toml  start.sh
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.github/: PROBE.md  actionlint.yaml  dependabot.yml
.intendant/: codex-managed-instructions.md
crates/app-html-assembler/: Cargo.toml
crates/app-html-assembler/src/: eval_order.rs  lib.rs  main.rs
crates/intendant-core/: Cargo.toml
crates/intendant-core/src/: autonomy.rs  conversation.rs  env_scrub.rs  error.rs  frames.rs  lib.rs  net.rs  peer_id.rs  skills.rs  state_paths.rs  usage.rs  vitals.rs
crates/intendant-display/: Cargo.toml
crates/intendant-display/src/: aggregator.rs  clipboard.rs  forward.rs  input_queue.rs  input_telemetry.rs  keymap.rs  lib.rs  macos.rs  macos_keymap.rs  synthetic.rs  twcc_tap.rs  visual_marker.rs  wayland.rs  webrtc.rs  windows.rs  x11.rs  x11_input.rs
crates/intendant-display/src/capture/: frame_diff.rs  mod.rs  pacing.rs
crates/intendant-display/src/encode/: h264_linux.rs  h264_windows.rs  mod.rs  vp8.rs
crates/intendant-display/src/encode/pool/: lease.rs  mod.rs  types.rs  worker.rs
crates/intendant-display/src/tile/: encode.rs  grid.rs  policy.rs  recovery.rs  synthetic_dirty.rs  transport.rs
crates/intendant-display/src/webrtc/: driver.rs  ice.rs  mod.rs  offer.rs  pool_glue.rs  tcp_mux.rs
crates/intendant-platform/: Cargo.toml
crates/intendant-platform/src/: display_target.rs  lib.rs  platform.rs  vision.rs
crates/owner-plane-core/: Cargo.toml
crates/owner-plane-core/src/: cbor.rs  domains.rs  keyschedule.rs  lib.rs  scenario.rs  suite.rs
crates/owner-plane-core/src/shapes/: journal.rs  mod.rs
crates/owner-plane-reducer/: Cargo.toml
crates/owner-plane-reducer/corpus/vectors/: f01-duplicate-map-key.json  f01-erasemref-worst-width.json  f01-frontierclose-sixty-six-heads.json  f01-indefinite-length-array.json  f01-kekwrap-worst-width.json  f01-unsorted-map-keys.json  f02-hash-domain-op.json  f02-mat-id-role-neutral.json  f03-ed25519-verify-valid.json  f03-p256-sign-then-verify-low-s.json  f04-malformed-point-rejected.json  f04-seal-open-roundtrip.json  f05-item-aead-tamper.json  f05-rewrap-byte-idempotence.json  f06-equal-coordinates-differing-hash.json  f06-fold-sort-and-replace.json  f06-retire-above-head-noop.json  f06-unsorted-heads.json  f07-c2-post-freeze-extra-field-kept.json  f07-delayed-reference-convergence-c1-i-c2.json  f07-header-unknown-version-rejects.json  f07-hosted-ceiling-zone-policy-inadmissible.json  f07-negation-residual-acceptance.json  f07-operation-version-unknown-rejects.json  f07-revoke-cutoff-empty-heads-with-history-rejects.json  f07-revoke-refs-stale-rotation-rejects.json  f07-staged-frontier-consumed-no-resurrection.json  f07-walkthrough-c2-freeze-both.json  f07-walkthrough-c3-branch-cut-below-head.json  f08-commitment-from-recovery-pk.json  f08-phrase-checksum-invalid-rejects.json  f08-phrase-derive-fixed-entropy.json  f08-phrase-derive-zero-entropy.json  f09-lease-online-grant-admits.json  f09-lease-overlong-window-invalid.json  f10-f10-budget-policy-noreset.json  f11-audit-release-split-txn-refused.json  f11-collision-loser-reenters-on-winner-death.json  f11-erase-deferral-nonterminal-journal.json  f11-export-import-construct-and-rederive.json  (+25 more)
crates/owner-plane-reducer/src/: crypto.rs  domains.rs  envelope.rs  fold.rs  harness.rs  journal.rs  lib.rs  outcomes.rs  policies.rs
crates/presence-core/: Cargo.toml
crates/presence-core/prompts/: SysPrompt_presence.md
crates/presence-core/src/: dispatch.rs  format.rs  lib.rs  tools.rs  types.rs  wasm.rs
crates/presence-web/: Cargo.toml
crates/presence-web/src/: app_state.rs  app_web.rs  callbacks.rs  gemini.rs  lib.rs  media_envelopes.rs  openai.rs  secondary.rs  server.rs
crates/rustc-governor/: Cargo.toml
crates/rustc-governor/src/: config.rs  flock.rs  govlog.rs  link.rs  linker.rs  main.rs  permits.rs  probe.rs
crates/rustc-governor/tests/: acceptance.rs  sccache_chain.rs
docs/: book.toml  cu-e2e-findings-2026-07-13.md  design-federated-input-authority.md  design-tile-streaming.md  smoke-display.md
examples/: damage-trace.rs
macos-app/: BackendSupervisor.swift  UpdateChecker.swift  entitlements.plist  main.swift
rfcs/owner-plane/browser-lane/: Cargo.toml  driver.cjs
rfcs/owner-plane/browser-lane/fixture/: index.html
rfcs/owner-plane/browser-lane/src/: lib.rs  webcrypto.rs
rfcs/owner-plane/core/: Cargo.toml
rfcs/owner-plane/core/src/: cbor.rs  corpus.rs  corpus_audit.rs  corpus_budget.rs  corpus_ctrl.rs  corpus_edge.rs  corpus_erase.rs  corpus_fold.rs  corpus_migration.rs  corpus_recovery.rs  corpus_status.rs  corpus_time.rs  coverage.rs  domains.rs  lib.rs  outcomes.rs  rng.rs  scenario.rs  suite.rs  surfaces.rs  tranche.rs  vector.rs
rfcs/owner-plane/core/src/shapes/: control.rs  envelope.rs  identity.rs  memory.rs  mod.rs
rfcs/owner-plane/reducer/: Cargo.toml
rfcs/owner-plane/reducer/src/: cbor.rs  crypto.rs  domains.rs  edge.rs  envelope.rs  erase.rs  fold.rs  harness.rs  journal.rs  kat.rs  lib.rs  outcomes.rs
scripts/: bh-bridge.rs  build-wasm.sh  bundle-macos.sh  claude_north_star_loop.sh  codex_context_stress_e2e.py  codex_north_star_loop.sh  connect-state-backup.sh  connect-state-restore.sh  connect-transport-e2e.cjs  deploy-connect-prod-alpha.sh  e2e-peer-pairing-vm.sh  ff-eval.py  install.ps1  install.sh  refresh-xterm-sri.sh  setup-lan-guest-macos.sh  setup-lan-macos.sh  setup-lan.bat  setup-lan.ps1  setup-lan.sh  setup-linux.sh  setup-macos.sh  setup-windows.ps1  smoke-dashboard-boot.cjs  update-vortex-pkg.sh  validate-client-egress.cjs  validate-connect-bootstrap.cjs  validate-connect-hosted-mvp.cjs  validate-connect-log.cjs  validate-dashboard.cjs  (+11 more)
(+606 files in other folders)
