[workspace]
members = [
    ".",
    "crates/app-html-assembler",
    "crates/intendant-core",
    "crates/intendant-display",
    "crates/intendant-platform",
    "crates/owner-plane-core",
    "crates/owner-plane-reducer",
    "crates/presence-core",
    "crates/presence-web",
    "crates/rustc-governor",
    "crates/station-web",
]

[package]
name = "intendant"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "intendant-runtime"
path = "src/main.rs"

[[bin]]
name = "intendant"
path = "src/bin/caller/main.rs"

[[bin]]
name = "intendant-connect"
path = "src/bin/connect/main.rs"

[dependencies]
# The vendored owner-plane D0-A kernel (Gate-A stamp 583f421a): the
# Memory service mints device-signed ops through core's writer and
# admits them through the reducer's fold. `default-features = false`
# keeps the reducer's JSON-Schema harness layers out of the daemon
# build (they gate the corpus tests, not production folds).
owner-plane-core = { path = "crates/owner-plane-core" }
owner-plane-reducer = { path = "crates/owner-plane-reducer", default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
env_logger = "0.11"
regex = "1.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }
html2text = "0.17"
portable-pty = "0.9"
dotenvy = "0.15"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
# Agenda item IDs: ULIDs are time-ordered, so lexicographic id order is
# creation order ŌĆö the agenda ledger's natural sort. Pure Rust.
ulid = "1"
url = "2"
axum = "0.8"
# Embedded authoritative DNS for the delegated fleet subzone
# (bin/connect dns.rs): plain UDP/TCP serving only ŌĆö no dnssec/tls
# features, and nothing here may re-enable rustls/aws_lc_rs (the
# workspace is pinned to the ring provider).
hickory-server = { version = "0.26", default-features = false }
# RFC2136 DNS-01 updates for the opt-in custom-domain lane. TSIG uses
# the same ring provider as the rest of the TLS/certificate stack.
hickory-proto = { version = "0.26", default-features = false, features = ["std", "dnssec-ring"] }
# Daemon-side ACME (Let's Encrypt DNS-01) for fleet certificates
# (bin/caller fleet_cert.rs). ring feature, matching the workspace
# crypto stack; default aws-lc-rs feature explicitly avoided.
instant-acme = { version = "0.8", default-features = false, features = ["ring", "hyper-rustls"] }
passkey-auth = "0.1.3"
# Used by upload_store for atomic-rename of streamed uploads into the final
# store location, and by tests elsewhere as a dev-dep.
tempfile = "3"
async-trait = "0.1"
futures-util = "0.3"
dirs = "6"
# PATHEXT-aware executable resolution. Used by `platform::spawn_command` to
# resolve bare program names (e.g. "codex") to npm's `.cmd`/`.bat` shims on
# Windows, which `CreateProcess` (and thus `Command::new`) does not do. Pure
# Rust, so no setup-script changes are needed.
which = "8"
intendant-core = { path = "crates/intendant-core" }
intendant-display = { path = "crates/intendant-display" }
intendant-platform = { path = "crates/intendant-platform" }
rmcp = { version = ">=1.4.0, <1.5.0", features = ["server", "transport-io", "client", "transport-child-process"] }
schemars = "1"
base64 = "0.22"
# Offset-mapped canonical folding for message-search matching (already a
# transitive dep; pure Rust).
unicode-normalization = "0.1"
bip39 = { version = "2", default-features = false, features = ["std"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
# rustls dep (matched to tokio-tungstenite 0.29's transitive version) so
# we can build a `ClientConfig` with a custom `ServerCertVerifier` for
# the `PinnedMutualTls` transport-auth variant. Same `ClientConfig` is
# also passed to reqwest via `use_preconfigured_tls` so the agent-card
# fetch path enforces pinning consistently with the WebSocket path.
#
# Pinned to the `ring` crypto provider (default-features off) rather than
# the default `aws-lc-rs`, which drags in `aws-lc-sys` (a C/asm crate
# needing nasm+cmake to build). reqwest/tokio-tungstenite/rtc all build
# their rustls `ClientConfig` from the process-default provider, so as
# long as nothing else in the tree re-enables `rustls/aws_lc_rs` this
# keeps the whole TLS stack on `ring`. `tls12` + `logging` preserve the
# feature set the default would have given us.
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging"] }
# Direct because daemon-to-daemon peer WebSocket clients build a custom rustls
# ClientConfig when presenting the installed access client certificate; the
# default tokio-tungstenite connector otherwise hides native-root loading.
rustls-native-certs = "0.8"
# Server-side TLS for the `--web` dashboard. `tokio-rustls` wraps an accepted
# `TcpStream` into a `TlsStream` once the demux detects a TLS ClientHello;
# `rcgen` mints a self-signed cert+key at startup (SAN = bind IP + localhost,
# optional hostname) so HTTPS/WSS works on Windows (and everywhere) without the
# `lan`/nginx/OpenSSL path. Both ride the same `ring` provider and `rustls`
# 0.23 the rest of the tree is pinned to ŌĆö no `aws-lc` is pulled in.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
# (rcgen is declared once below ŌĆö it's shared by the gateway self-signed cert
# and the `lan` mTLS cert generation, with the superset feature set.)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
tokio-util = { version = "0.7", features = ["rt"] }
presence-core = { path = "crates/presence-core" }
libc = "0.2"
# Used by `find_available_port` / web listener binding to flip
# IPV6_V6ONLY off before bind ŌĆö tokio's `TcpSocket` doesn't expose
# that knob, and macOS defaults it to true so an IPv6 bind without
# this refuses IPv4 connections. Kept pinned to tokio 1.x's transitive
# version so there's no risk of dual copies in the dep tree.
socket2 = "0.6"
rtc = { version = "=0.9.1" }
bytes = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
# Gzip for the web gateway's embedded static assets (app.html, WASM, JS).
# Default features = the pure-Rust miniz_oxide backend ŌĆö no C, consistent
# with the repo's pure-Rust crypto/compression policy, and already in the
# tree transitively via `zip`'s deflate feature.
flate2 = "1"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
similar = "2"
sha2 = "0.10"
ring = "0.17"
# Terminal QR for the enrollment URL (unicode render only ŌĆö no image/svg).
qrcode = { version = "0.14", default-features = false }
# `intendant lan` mTLS certificate generation ŌĆö pure-Rust, replacing the
# former OpenSSL dependency. `rsa` generates RSA-2048 keys; `rcgen` builds
# the CA + server (SAN=IP, Ōēż825d) + client certs on the `ring` backend using
# RSA/SHA-256 signatures; `x509-parser` (enabled in rcgen and used directly)
# reads the server cert CN back for IP-drift detection and reconstructs the
# CA issuer on `recert`. `p12-keystore` writes the client bundle using legacy
# PBES1/3DES + SHA-1 MAC because Apple's profile installer and `security import`
# auto-detection reject the crate's modern PBES2/AES output unless the caller
# forces `-f pkcs12`. This stays pure-Rust and cross-platform, so the deps live
# here rather than under a platform gate. `pem` decodes stored PEM certs to DER
# for the SHA-256 fingerprint (`pin-self-cert`) path.
rcgen = { version = "0.14", default-features = false, features = ["pem", "ring", "x509-parser"] }
x509-parser = "0.18"
p12-keystore = "0.2.1"
pem = "3"
rsa = "0.9.8"
rand = "0.8"
# `rcgen`'s `not_before` / `not_after` cert-validity fields are `time`'s
# `OffsetDateTime`; we set them via `OffsetDateTime::now_utc()` + `Duration`.
time = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
ashpd = { version = "0.11", features = ["tokio"] }
# Pure-Rust AT-SPI2 (read_screen element trees on X11 + Wayland). Pinned to
# the 0.28+ line so it shares ashpd 0.11's zbus 5.x ŌĆö older atspi forks in a
# second zbus stack.
atspi = { version = "0.30", features = ["tokio"] }

[target.'cfg(target_os = "macos")'.dependencies]
# (screencapturekit moved to crates/intendant-display with the display
# pipeline ŌĆö macos.rs there is its only user in the workspace.)
core-graphics = { version = "0.25", features = ["highsierra"] }
core-foundation = "0.10"
accessibility-sys = "0.2"

[target.'cfg(windows)'.dependencies]
# (windows-sys moved to crates/intendant-platform with platform.rs, its only
# user in this package.)
# The richer `windows` crate (COM wrappers, RAII interface handles) powers the
# Tier-1 display backend (`display/windows.rs`): DXGI Desktop Duplication for
# capture, Direct3D 11 for the staging-texture copy, GDI/WindowsAndMessaging
# for virtual-screen metrics, and SendInput for keyboard/mouse injection.
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    # OpenInputDesktop / OpenDesktopW / SetThreadDesktop: the capture thread must
    # bind to the *interactive* desktop (Winsta0\Default) before any GDI DC work,
    # otherwise GetDC(None)+BitBlt reads the worker thread's default (blank/black)
    # desktop even though a real desktop is being displayed. See
    # `bind_thread_to_input_desktop` in display/windows.rs.
    "Win32_System_StationsAndDesktops",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    # Media Foundation H.264 encoder (display/encode/h264_windows.rs): the
    # H.264 Encoder MFT (IMFTransform / MFTEnumEx), media types, samples,
    # ICodecAPI for force-keyframe, and all the MF_MT_* / MFVideoFormat_* /
    # eAVEncH264VProfile_* GUIDs. `ICodecAPI::SetValue` takes a `VARIANT`
    # (Win32_System_Variant, itself gated on Com + Ole), so those come too.
    "Win32_Media_MediaFoundation",
    "Win32_System_Variant",
    "Win32_System_Ole",
    # Windows filesystem sandbox (win_sandbox.rs): restricted tokens
    # (Win32_Security), DACL editing (Security_Authorization +
    # Storage_FileSystem access masks), CreateProcessAsUserW + std-handle
    # plumbing (System_Threading + System_Console), kill-on-close job
    # objects (System_JobObjects), and GetCommandLineW for the runtime
    # re-exec (System_Environment).
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Environment",
] }
[build-dependencies]
# build.rs assembles static/app.html from the static/app/ fragments before
# every compile, so `include_str!` embeds an artifact that matches the
# fragment sources. Same crate backs the CI regen gate
# (`cargo run -p app-html-assembler`); std-only, compiles in seconds.
app-html-assembler = { path = "crates/app-html-assembler" }

[profile.dev]
split-debuginfo = "unpacked"
# Line tables keep panic backtraces readable while dropping the bulk of
# debuginfo the edit->check->test loop never uses; full `debug = 2` is a
# `cargo build --profile dev-debug`-style opt-in away if a debugger
# session ever needs it (or temporarily flip this line).
debug = "line-tables-only"

# The editŌåÆrebuild loop ships from target/release (the multi-agent
# convention), and the caller is one huge compilation unit ŌĆö without
# incremental every touched line recompiles all of it (~1m); with it,
# steady-state rebuilds are far cheaper. Runtime cost is negligible for
# a dev binary; CI release builds are cold either way.
[profile.release]
incremental = true

[dev-dependencies]
# The gateway's dashboard-control tests drive WebRtcPeer::new_for_test.
intendant-display = { path = "crates/intendant-display", features = ["test-util"] }
# Pins the dashboard WASM reducer's swallowed-event list (JS_HANDLED_EVENTS)
# to the daemon's OutboundEvent vocabulary ŌĆö see the parity test in
# src/bin/caller/types.rs. Only the target-agnostic app_state module is used;
# the wasm-only modules stay cfg'd out on native.
presence-web = { path = "crates/presence-web" }
# Enable tokio's `test-util` feature in test builds so `#[tokio::test(start_paused = true)]`
# and `tokio::time::advance` are available. Cargo merges features additively between
# [dependencies] and [dev-dependencies] for test/example builds ŌĆö release builds still
# get just the `full` feature set from line 18.
tokio = { version = "1.0", features = ["test-util"] }

# macOS-only test dependency: drives Apple's real `SecPKCS12Import` (Security.framework)
# so a `#[cfg(target_os = "macos")]` test in `lan::certs` can prove the generated
# `client.p12` is accepted by the actual OS importer ŌĆö not just round-tripped through
# the `p12-keystore` crate. Already in the dependency tree transitively (via
# rustls-native-certs), so pinning it here adds no new crate to the lock.
[target.'cfg(target_os = "macos")'.dev-dependencies]
security-framework = "3"

# Optimize external dependencies even in dev builds. The pure-Rust crypto
# stack (RustCrypto rsa/num-bigint-dig keygen, the p12 3DES/SHA-1 bundle
# path) runs 10-50x slower unoptimized and every cert-touching test pays
# it ŌĆö RSA keygen alone was ~25s/key, and macOS peer-identity tests still
# took 60s+ with only the rsa crates optimized. `"*"` matches
# non-workspace crates only: our own code stays opt-level 0 and fully
# debuggable, and deps rarely rebuild so the one-time cost is amortized
# immediately.
[profile.dev.package."*"]
opt-level = 2
# The bignum arithmetic under RSA keygen wants full optimization.
[profile.dev.package.rsa]
opt-level = 3
[profile.dev.package.num-bigint-dig]
opt-level = 3

# Wire-MTU fix for federated data channels: rtc-sctp's default packet size
# overflows 1280-MTU (IPv6-minimum / overlay) paths once DTLS+UDP headers
# are added, and oversized flights blackhole silently. One-constant vendored
# patch; rationale + exit criteria in vendor/rtc-sctp/INTENDANT-PATCH.md.
[patch.crates-io]
rtc-sctp = { path = "vendor/rtc-sctp" }
