[package]
name = "intendant-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
presence-core = { path = "../presence-core" }
serde = { version = "1.0", features = ["derive"] }
# skills discovery walks the home skills dir.
dirs = "6"
serde_json = "1.0"
socket2 = "0.6"
tokio = { version = "1.0", features = ["net", "sync"] }
# CallerError carries reqwest::Error in its Http variant; feature set
# mirrors the caller's so workspace feature unification stays a no-op.
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }
# Safe cross-platform local network-interface enumeration.
if-addrs = "0.15"

[dev-dependencies]
# autonomy's approval-config tests parse TOML fixtures; frames' tests
# write registries into temp dirs.
toml = "0.8"
tempfile = "3"
# the listener rebind tests drive a real accept loop
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread", "time"] }
