[package]
name = "presence-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
presence-core = { path = "../presence-core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "ErrorEvent",
  "BinaryType",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
  "Window",
  "console",
]
