[package]
name = "owner-plane-reducer"
version = "0.1.0"
edition = "2021"
description = "D0-A independent reducer + differential harness. Shares NO code with owner-plane-core (the fixture-minting reference): own strict CBOR reader, own domain framing, own fold logic — the point of the differential exercise. Third-party primitives (sha2, ed25519-dalek, serde_json) are shared dependencies, not shared code."
publish = false

[features]
default = ["schema"]
# The JSON-Schema structural layers (container + companion). Default
# ON — the CLI harness always runs them. The browser lane's wasm
# build turns them off: jsonschema → ahash → getrandom 0.3 does not
# build for wasm32-unknown-unknown, and the schema layers are
# execution-surface-independent (the native harness enforces them on
# the same corpus in the same CI run).
schema = ["dep:jsonschema"]

[[bin]]
name = "harness"
path = "src/bin/harness.rs"
required-features = ["schema"]

[[bin]]
name = "storage_lane"
path = "src/bin/storage_lane.rs"

[dependencies]
sha2 = "0.10"
ed25519-dalek = "2"
serde_json = "1"
# The harness validates every vector against the §13.1 container
# schema AND the companion with a real JSON Schema engine (Draft
# 2020-12) — hand-rolled validation is the reference core's lane.
jsonschema = { version = "0.26", default-features = false, optional = true }
# Families 3-5 KAT lanes (third-party primitives, not shared code).
p256 = { version = "0.13", features = ["ecdsa"] }
hpke = { version = "0.14.0", default-features = false, features = ["nistp", "hkdfsha2", "aes", "alloc"] }
aes-gcm = "0.10"
hkdf = "0.12"
pbkdf2 = "0.12"
# The BIP-39 English wordlist as standard DATA (the index/checksum
# math is the reducer's own — §2.4's independent rejection leg).
bip39 = "2"
# §2.4 NFKD normalization of mnemonic and passphrase.
unicode-normalization = "0.1"

# Standalone: NOT a member of the intendant workspace — lives and
# versions with the spec, like core/.
[workspace]
